--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tap-tiktok"
-version = "0.0.1"
+version = "0.1.0"
 description = "`tap-tiktok` is a Singer tap for TikTok, built with the Meltano SDK for Singer Taps."
 authors = ["Gary James"]
 keywords = [
@@ -10,19 +10,19 @@ keywords = [
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
-python = "<3.11,>=3.7.1"
-requests = "^2.25.1"
-singer-sdk = "^0.4.4"
+python = "<3.12,>=3.9"
+requests = "~=2.31"
+singer-sdk = "~=0.34"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-tox = "^3.24.4"
-flake8 = "^3.9.2"
-black = "^21.9b0"
-pydocstyle = "^6.1.1"
-mypy = "^0.910"
-types-requests = "^2.26.1"
-isort = "^5.10.1"
+pytest = "~=7.4"
+tox = "~=4.12"
+flake8 = "~=7.0"
+black = "~=24.1"
+pydocstyle = "~=6.3"
+mypy = "~=1.8"
+types-requests = "~=2.31"
+isort = "~=5.13"
 
 [tool.isort]
 profile = "black"
@@ -30,11 +30,7 @@ multi_line_output = 3 # Vertical Hanging Indent
 src_paths = "tap_tiktok"
 
 [build-system]
-# Uncomment the pinned version in favor of the git URL once
-# https://github.com/python-poetry/poetry-core/pull/257 is merged
-# and a new poetry-core 1.0.x is released
-# requires = ["poetry-core>=1.0.0"]
-requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
